[project]
name = "onesec"
version = "0.1.0"
description = "Automatically picks the most interesting 1-second moments from a folder of videos and stitches them into a highlight montage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    # tomllib is stdlib in Python 3.11+; this project requires 3.12 — no tomli needed
    "ffmpeg-python>=0.2",
    "av>=12",                    # PyAV — primary frame decoder
    "opencv-python-headless>=4",
    "numpy>=1.26",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.10",
    "silero-vad>=5",
    "torch>=2",
]
gpu-decode = [
    "decord>=0.6",   # GPU-accelerated frame decoding (optional; PyAV is default)
]
clip = [
    "open-clip-torch>=2.24",
    "torch>=2",
    "Pillow>=10",
]
whisper = [
    "faster-whisper>=1.0",
    "torch>=2",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
]

[project.scripts]
onesec = "onesec.cli:app"

[project.entry-points."onesec.analyzers"]
# Third-party analyzers register here

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onesec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
